# cpp-connect4-noGUI

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Connect4.hpp
src/: 4_in_a_row_app.cpp  FourInRowBoard.cpp  FourInRowGameManager.cpp  FourInRowPlayers.cpp  drdeclare.cpp
